<resources>
    <string name="app_name">Turtle Soccer</string>
    <string name="title_home">Home</string>
    <string name="title_tournaments">Tournaments</string>
    <string name="title_competitions">Competitions</string>
    <string name="title_confederations">Confederations</string>
    <string name="title_nations">Associations</string>
    <string name="toolbar_home">Home</string>
    <string name="toolbar_tournaments">Latest Tournaments</string>
    <string name="toolbar_competitions">Competitions</string>
    <string name="toolbar_confederations">FIFA &amp; Regional Confederations</string>
    <string name="toolbar_nations">National Associations</string>

    <string name="text_home">It\'s known as football everywhere in the world. In America, we call it Soccer!</string>
    <string name="current_tournaments">Current Tournaments</string>

    <string name="tournament_about">About</string>
    <string name="tournament_matches">Matches</string>
    <string name="tournament_groups">Groups</string>
    <string name="tournament_final_standings">Final Standings</string>

    <string name="original_name_label"><b>Original Name:</b></string>
    <string name="host_label"><b>Host:</b></string>
    <string name="hosts_label"><b>Hosts:</b></string>
    <string name="final_host_label"><b>Final Host:</b></string>
    <string name="final_hosts_label"><b>Final Hosts:</b></string>
    <string name="tournament_dates_label"><b>Dates:</b></string>
    <string name="tournament_dates">%1$s - %2$s</string>
    <string name="qualifying_dates_label"><b>Qualifying:</b></string>
    <string name="competition_dates_label"><b>Competition:</b></string>
    <string name="league_dates_label"><b>League:</b></string>
    <string name="final_dates_label"><b>Final:</b></string>
    <string name="relegation_dates_label"><b>Relegation:</b></string>
    <string name="tournament_team_count_label"><b>Teams: </b></string>
    <string name="team_count_with_confeds">%1$s (%2$s confeds)</string>
    <string name="team_count_with_one_confed">%1$s (%2$s confed)</string>
    <string name="competition_team_count_label"><b>Comp Teams: </b></string>
    <string name="final_team_count_label"><b>Final Teams: </b></string>
    <string name="total_team_count_label"><b>Total Teams: </b></string>
    <string name="total_team_count_with_association">%1$s (%2$s associations)</string>
    <string name="total_plus_transfer_team_count">%1$s + %2$s</string>
    <string name="total_plus_transfer_team_count_with_association">%1$s + %2$s (%3$s associations)</string>
    <string name="venue_count_label"><b>Venues: </b></string>
    <string name="venue_count_with_cities">%1$s (%2$s cities)</string>
    <string name="venue_count_with_one_city">%1$s (%2$s city)</string>
    <string name="final_venue_count_label"><b>Final Venues: </b></string>
    <string name="champions_label"><b>Champions: </b></string>
    <string name="runner_up_label"><b>Runner-up: </b></string>
    <string name="runners_up_label"><b>Runners-up: </b></string>
    <string name="third_place_label"><b>Third-place: </b></string>
    <string name="fourth_place_label"><b>Fourth-place: </b></string>
    <string name="gold_medal_label"><b>Gold: </b></string>
    <string name="silver_medal_label"><b>Silver: </b></string>
    <string name="bronze_medal_label"><b>Bronze: </b></string>
    <string name="matches_played_label"><b>Matches: </b></string>
    <string name="goals_scored_label"><b>Goals: </b></string>
    <string name="goals_scored_per_match">%1$s (%2$s /match)</string>
    <string name="attendance_label"><b>Attendance: </b></string>
    <string name="attendance_per_match">%1$s (%2$s /match)</string>
    <string name="final_matches_played_label"><b>Final Matches: </b></string>
    <string name="final_goals_scored_label"><b>Final Goals: </b></string>
    <string name="final_attendance_label"><b>Final Attendance: </b></string>
    <string name="golden_boot_label">Golden Boot:</string>
    <string name="golden_boots_label">Golden Boots:</string>
    <string name="golden_shoe_label">Golden Shoe:</string>
    <string name="golden_shoes_label">Golden Shoes:</string>
    <string name="top_scorer_label">Top Scorer:</string>
    <string name="top_scorers_label">Top Scorers:</string>
    <string name="silver_boot_label">Silver Boot:</string>
    <string name="silver_boots_label">Silver Boots:</string>
    <string name="silver_shoe_label">Silver Shoe:</string>
    <string name="silver_shoes_label">Silver Shoes:</string>
    <string name="bronze_boot_label">Bronze Boot:</string>
    <string name="bronze_boots_label">Bronze Boots:</string>
    <string name="bronze_shoe_label">Bronze Shoe:</string>
    <string name="bronze_shoes_label">Bronze Shoes:</string>
    <string name="golden_ball_label">Golden Ball:</string>
    <string name="player_tournament_label">Player of the Tournament:</string>
    <string name="man_competition_label">Man of the Competition:</string>
    <string name="silver_ball_label">Silver Ball:</string>
    <string name="bronze_ball_label">Bronze Ball:</string>
    <string name="best_young_player_label">Best Young Player:</string>
    <string name="best_young_players_label">Best Young Players:</string>
    <string name="golden_glove_label">Golden Glove:</string>
    <string name="golden_gloves_label">Golden Gloves:</string>
    <string name="best_player_label">Best Player:</string>
    <string name="best_players_label">Best Players:</string>
    <string name="best_goalkeeper_label">Best Goalkeeper:</string>
    <string name="best_goalkeepers_label">Best Goalkeepers:</string>
    <string name="best_forward_label">Best Forward:</string>
    <string name="best_forwards_label">Best Forwards:</string>
    <string name="best_midfielder_label">Best Midfielder:</string>
    <string name="best_midfielders_label">Best Midfielders:</string>
    <string name="best_defender_label">Best Defender:</string>
    <string name="best_defenders_label">Best Defenders:</string>
    <string name="fair_play_label"><b>Fair Play:</b></string>
    <string name="final_top_scorer_label">Final Top Scorer:</string>
    <string name="final_top_scorers_label">Final Top Scorers:</string>
    <string name="final_best_player_label">Final Best Player:</string>
    <string name="final_best_players_label">Final Best Players:</string>
    <string name="final_best_young_player_label">Final Best Young Player:</string>
    <string name="final_best_young_players_label">Final Best Young Players:></string>
    <string name="sqbr_left">[</string>
    <string name="sqbr_right">]</string>
    <string name="pipe">|</string>

    <string name="competitions_label">Competitions: </string>
    <string name="competition_about">About</string>
    <string name="competition_results">Results</string>
    <string name="tour">Tour</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="_4th">4th</string>
    <string name="and">&amp;</string>
    <string name="competition_all_time_standings">All-time Standings</string>

    <string name="competition_current_champions_label"><b>Current Champions: </b></string>
    <string name="competition_last_champions_label"><b>Last Champions: </b></string>
    <string name="competition_titles">(%1$s titles)</string>
    <string name="competition_one_title">(%1$s title)</string>
    <string name="competition_most_successful_team_label"><b>Most successful team: </b></string>
    <string name="competition_most_successful_teams_label"><b>Most successful teams: </b></string>

    <string name="path_header">%1$s Path</string>
    <string name="score">%1$s - %2$s</string>
    <string name="aet">(a.e.t.)</string>
    <string name="awd">(awd)</string>
    <string name="bye">Bye</string>
    <string name="wo">(w/o)</string>
    <string name="dq">(dq)</string>
    <string name="withdrew">(wd)</string>
    <string name="cancelled">---</string>
    <string name="postponed">Ppd</string>
    <string name="aggregate_footnote"><![CDATA[Aggregate: <b>%1$s</b>]]></string>
    <string name="away_goals_footnote"><![CDATA[>>> <b>%1$s</b> won on away goals]]></string>
    <string name="away_goals_aet_footnote"><![CDATA[>>> <b>%1$s</b> won on away goals after extra time]]></string>
    <string name="aet_footnote"><![CDATA[>>> <b>%1$s</b> won after extra time]]></string>
    <string name="penalty_footnote"><![CDATA[>>> <b>%1$s</b> won on penalties <b>%2$s</b>]]></string>
    <string name="leg1">1st leg</string>
    <string name="leg2">2nd leg</string>
    <string name="replay">Replay</string>
    <string name="mp">M</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="gf">GF</string>
    <string name="ga">GA</string>
    <string name="gd">+/-</string>
    <string name="pts">P</string>
    <string name="minus">-</string>
    <string name="positive">+%1$s</string>
</resources>
