<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_tournaments"
        android:icon="@drawable/icons8_tournament_48"
        android:title="@string/title_tournaments" />

    <item
        android:id="@+id/navigation_competitions"
        android:icon="@drawable/cup_50"
        android:title="@string/title_competitions" />

    <item
        android:id="@+id/navigation_confederations"
        android:icon="@drawable/world_50"
        android:title="@string/title_confederations" />

    <item
        android:id="@+id/navigation_nations"
        android:icon="@drawable/flag_64"
        android:title="@string/title_nations" />

</menu>
