<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mmtran.turtlesoccer.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tournaments"
        android:name="com.mmtran.turtlesoccer.fragments.TournamentsFragment"
        android:label="@string/title_tournaments"
        tools:layout="@layout/fragment_tournaments" />

    <fragment
        android:id="@+id/navigation_competitions"
        android:name="com.mmtran.turtlesoccer.fragments.CompetitionsFragment"
        android:label="@string/title_competitions"
        tools:layout="@layout/fragment_competitions" />

    <fragment
        android:id="@+id/navigation_confederations"
        android:name="com.mmtran.turtlesoccer.fragments.ConfederationsFragment"
        android:label="@string/title_confederations"
        tools:layout="@layout/fragment_confederations" />

    <fragment
        android:id="@+id/navigation_nations"
        android:name="com.mmtran.turtlesoccer.fragments.NationsFragment"
        android:label="@string/title_nations"
        tools:layout="@layout/fragment_nations" />

</navigation>
