<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/group_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="viewStart"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/group_box"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="@string/mp"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="@string/w"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="@string/d"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="@string/l"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="@string/gf"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="@string/ga"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="@string/gd"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                    <TextView
                        android:text="@string/pts"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </TableRow>

            <TableRow>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/pool_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</LinearLayout>
