<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/time_column"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/leg_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/group_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="11sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/home_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/home_awd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:text="@string/awd"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/home_dq_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:text="@string/dq"
                android:textSize="15sp"
                android:textColor="@color/gray3"
                android:visibility="gone" />

            <TextView
                android:id="@+id/home_withdrew_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                android:text="@string/withdrew"
                android:textSize="15sp"
                android:textColor="@color/gray3"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical">

            <include
                android:id="@+id/home_flag"
                layout="@layout/fragment_team_flag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extra_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extra_score_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/aet"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/awd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/awd"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/bye_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/bye"
                android:textSize="15sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <TextView
                android:id="@+id/wo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/wo"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/cancelled_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/cancelled"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/gray3"
                android:visibility="gone" />

            <TextView
                android:id="@+id/postponed_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/postponed"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/gray3"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:gravity="center_vertical">

            <include
                android:id="@+id/away_flag"
                layout="@layout/fragment_team_flag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/away_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/away_awd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/awd"
                android:textSize="15sp"
                android:textColor="@color/blue"
                android:visibility="gone" />

            <TextView
                android:id="@+id/away_dq_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/dq"
                android:textSize="15sp"
                android:textColor="@color/gray3"
                android:visibility="gone" />

            <TextView
                android:id="@+id/away_withdrew_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/withdrew"
                android:textSize="15sp"
                android:textColor="@color/gray3"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aggregate_score_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/aggregate_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/extra_time_footnote_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/extra_time_footnote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textAlignment="viewStart"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
